--- a/chainlink-dapp-example/backend/package.json
+++ b/chainlink-dapp-example/backend/package.json
@@ -10,11 +10,14 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@chainlink/hardhat-chainlink": "^0.0.4",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.4",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "hardhat": "^2.22.4"
   },
   "dependencies": {
     "@chainlink/contracts": "^1.1.1",
+    "@nomicfoundation/hardhat-ethers": "^3.0.6",
     "dotenv": "^16.4.5"
   }
 }
